move error panel padding from content groups